tests/integration/snapshots/integration__snapshot__unpinned-uses-composite-config-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().config(input_under_test(\"unpinned-uses/configs/composite-2.yml\")).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:13:9
   |
13 |       - uses: actions/checkout
   |         ^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a ref or hash (required by actions/* policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:27:9
   |
27 |       - uses: github/codeql-action/init@v3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by github/codeql-action/init policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:29:9
   |
29 |       - uses: github/codeql-action/upload-sarif@v3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by github/codeql-action/upload-sarif policy)
   |
   = note: audit confidence → High

3 findings: 0 unknown, 0 informational, 0 low, 0 medium, 3 high
